# MasterEvent

./: .editorconfig  .gitignore  MasterEvent.sln  README.md  qodana.yaml
.github/workflows/: release.yml
MasterEvent/: Configuration.cs  Constants.cs  MasterEvent.csproj  MasterEvent.json  Plugin.cs
MasterEvent/Communication/: MessageType.cs  ProtocolHandler.cs  RelayClient.cs  RelayMessage.cs
MasterEvent/Localization/: Loc.cs  Strings.en.resx  Strings.resx
MasterEvent/Models/: Attitude.cs  CounterDefinition.cs  CustomCounter.cs  DiceResult.cs  EventTemplate.cs  GmCache.cs  HpMode.cs  MarkerData.cs  MarkerSet.cs  PlayerData.cs  PlayerSheet.cs  StatDefinition.cs  StatValue.cs  TurnEntry.cs  TurnState.cs  WaymarkId.cs
MasterEvent/Services/: DiceEngine.cs  PartyWatcher.cs  SaveManager.cs  SessionManager.cs  TemplateManager.cs  WeathermanIpc.cs
MasterEvent/UI/: ConfigWindow.cs  GmWindow.Group.cs  GmWindow.Markers.cs  GmWindow.Models.cs  GmWindow.Profiles.cs  GmWindow.Settings.cs  GmWindow.Turns.cs  GmWindow.Weather.cs  GmWindow.cs  MasterEventTheme.cs  MasterEventWindowBase.cs  PlayerWindow.cs  RgpdConsentWindow.cs  RoundAnnouncementOverlay.cs
MasterEvent/UI/Components/: AttitudePicker.cs  CounterBar.cs  DiceRollOverlay.cs  (+2 more)
MasterEvent/Waymarks/: WaymarkManager.cs  WaymarkSafetyCheck.cs
MasterEventRelay/: .env.example  Cargo.toml  package.json  server.js
MasterEventRelay/src/: config.rs  db.rs  main.rs  models.rs  state.rs
MasterEventRelay/src/http/: health.rs  mod.rs  templates.rs
MasterEventRelay/src/ws/: broadcast.rs  handlers.rs  mod.rs  session.rs
