[package]
name = "master-event-relay"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
futures-util = "0.3"
